fixed overlaping issue on hero images

--- a/client/assets/stylesheets/partials/_skins.scss
+++ b/client/assets/stylesheets/partials/_skins.scss
@@ -46,22 +46,22 @@
     background-size: 100px 100px;
 }
 
-.bg-cigars-tiled {
+.bg-cigars-tiled:not(.sm) {
     @extend .bg-tiled;
     background-image: url("../images/bg_tile_cigar_1.jpg");
 }
 
-.bg-cbd-tiled {
+.bg-cbd-tiled:not(.sm) {
     @extend .bg-tiled;
     background-image: url("../images/bg_tile_cbd_1.jpg");
 }
 
-.bg-vape-tiled {
+.bg-vape-tiled:not(.sm) {
     @extend .bg-tiled;
     background-image: url("../images/bg_tile_vape_1.jpg");
 }
 
-.bg-glass-tiled {
+.bg-glass-tiled:not(.sm) {
     @extend .bg-tiled;
     background-image: url("../images/bg_tile_glass_1.jpg");
 }
@@ -75,10 +75,31 @@
 }
 
 .bordered-bottom {
-    border-bottom: solid white;
+    border-bottom: solid white 1px;
 }
 
 .bottom-overlay {
     background: linear-gradient(to bottom, rgba(255, 255, 255, .25) 0%, rgba(0, 0, 0, 0.69) 100%);
     color: #ffffff;
+}
+
+@include media-breakpoint-down(sm) {
+    .centered-display {
+        width: 100%;
+    }
+    .bg-cigars-tiled:not(.sm), .bg-cbd-tiled:not(.sm), .bg-vape-tiled:not(.sm), .bg-glass-tiled:not(.sm) {
+        background: none;
+    }
+    .bg-cigars-tiled.sm {
+        background-image: url("../images/bg_tile_cigar_1.jpg");
+    }
+    .bg-cbd-tiled.sm{
+        background-image: url("../images/bg_tile_cbd_1.jpg");
+    }
+    .bg-vape-tiled.sm {
+        background-image: url("../images/bg_tile_vape_1.jpg");
+    }
+    .bg-glass-tiled.sm {
+        background-image: url("../images/bg_tile_glass_1.jpg");
+    }
 }
