--- a/client/assets/stylesheets/partials/_structures.scss
+++ b/client/assets/stylesheets/partials/_structures.scss
@@ -30,6 +30,10 @@
     bottom: 0;
 }
 
+.z-99 {
+    z-index: 99;
+}
+
 @include media-breakpoint-down(sm) {
     .centered-display {
         width: 100%;
